--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <div class="container">
             <div id="drawing"></div>
         </div>
-        <script src="libs/honeycomb.js"></script>
-        <script src="libs/svg.js"></script>
-        <script src="script.js"></script>
+        <script type="text/javascript" src="libs/honeycomb.js"></script>
+        <script type="text/javascript" src="libs/svg.js"></script>
+        <script type="text/javascript" src="asset/json/star_map.json"></script>
+        <script type="text/javascript" src="script.js"></script>
 
     </body>
 
